Project

General

Profile

Actions

Bug #20377

closed

Upon swift bucket list, do not fetch the bucket stats by default

Added by Pavan Rallabhandi almost 7 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

I was referring to the RGWListBuckets implementation for swift and realized that ‘need_stats’ is set to true by default.I realize because of this, the listing of buckets at a user level for one of our workloads with potentially large number of objects in a container is taking forever.

Actions #1

Updated by Pavan Rallabhandi almost 7 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Yuri Weinstein almost 7 years ago

Pavan Rallabhandi wrote:

https://github.com/ceph/ceph/pull/15834

tested and merged

Actions #3

Updated by Casey Bodley over 2 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF